# Ene

./: .bumpversion.cfg  .coveragerc  .flake8  .gitignore  .graphqlconfig  .pylintrc  .travis.yml  CONTRIBUTING.md  Makefile  README.md  ene.py  ene.sh  graphql.config.json  main.py  pyproject.toml
ene/: __init__.py  __main__.py  api.py  app.py  auth.py  cli.py  config.py  constants.py  database.py  entities.py  errors.py  files.py  media_players.py  models.py  player.py  series_manager.py  types_.py  util.py  vlc_subprocess.py
ene/anilist/: __init__.py  anilist_client.py  api.py  auth.py  enums.py  types.py
ene/api/: __init__.py  anilist.py  auth.py  browse.graphql  enums.py  media.py  schema.graphqls  test.graphql  types.py  types_.py
ene/domain/: __init__.py  faults.py
ene/graphql/: filters.py  inputs.py  mutations.py  queries.py  season.graphql
ene/graphql/schema/: airing_episode.py  media.py  media_list.py  studio.py
ene/persistence/: data_access.py  migrations.py  models.py
ene/resources/: __init__.py  main_window.ui  main_window_uic.py  settings_window.ui  settings_window_uic.py  style_rc.py
ene/ui/: __init__.py  common.py  custom.py  ene.ui  main_window.py  main_window.ui  media_browser.py  settings.py  settings.ui  settings_window.py  settings_window.ui  window.py
ene/ui/widgets/: episode_browser.py  media_browser.py  series_browser.py
graphql/: schema.graphqls
tests/: __init__.py  conftest.py  mock_db.sql  test_api.py  test_app.py  test_auth.py  test_config.py  test_database.py  test_dict_filter.py  test_ene.py  test_files.py  test_get_resources.py  test_util.py
tests/anilist/: test_anilist_client_unit.py  test_auth_integration.py
tests/domain/: fake_faults.py
tools/: format_graphql_schema.py  make_enums.py  schema.graphqls
ui/: ene.ui  settings.ui
