[tool.poetry]
name = "ene"
version = "0.1.1"
description = "Automatically track and sync anime watching progress"
authors = ["Peijun Ma <peijun.ma@protonmail.com>","Justin Sedge <sedgejustin@gmail.com>"]
license = "GPL-3.0+"
readme = "README.md"
repository = "https://github.com/MaT1g3R/ene"
homepage = "https://github.com/MaT1g3R/ene"
classifiers = [
    "Development Status :: 1 - Planning",
]

[tool.poetry.dependencies]
python = "^3.6"
toml = "^0.9.4"
requests = "^2.18"
python-mpv = "^0.3.8"
python-vlc = "^3.0"
importlib_resources = { version = "^0.8.0", python = "<3.7" }
dataclasses = { version = "^0.6.0", python = "<3.7" }
fuzzywuzzy = "^0.16.0"
PySide2 = "^5.11"

[tool.poetry.dev-dependencies]
pytest = ">=3.5"
flake8 = "^3.5"

